--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splinetool/runtime": "^1.0.63",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^3.2.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
