--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.18",
     "@formkit/auto-animate": "^0.8.1",
     "@headlessui/react": "^1.7.18",
     "@solana/wallet-adapter-base": "^0.9.23",
