fix wallets modal

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "@headlessui/react": "^1.7.18",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.30",
-    "@solana/web3.js": "^1.90.1",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.91.4",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.63",
     "react": "^18.2.0",
@@ -36,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "3.2.5",
+    "sass": "^1.74.1",
     "typescript": "^5.2.2",
     "unplugin-fonts": "^1.1.1",
     "vite": "^5.1.4"
