--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@dotlottie/react-player": "^1.6.18",
     "@formkit/auto-animate": "^0.8.1",
     "@headlessui/react": "^1.7.18",
