--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "unplugin-fonts": "^1.1.1",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-node-polyfills": "^0.21.0"
   }
 }
