--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@dotlottie/react-player": "^1.6.18",
     "@formkit/auto-animate": "^0.8.1",
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@solana/spl-token": "^0.4.3",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -22,6 +24,7 @@
     "@solana/web3.js": "^1.90.1",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.63",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "classnames": "^2.5.1",
     "identicon.js": "^2.3.3",
     "react": "^18.2.0",
