--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/identicon.js": "^2.3.4",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
