--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@jup-ag/wallet-adapter": "^0.1.5",
+    "@solana-mobile/wallet-adapter-mobile": "^2.0.0",
     "@solana/spl-token": "^0.4.3",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
