--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.7",
     "zod": "^3.22.4"
   },
