--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.63",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "identicon.js": "^2.3.3",
     "react": "^18.2.0",
